--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             With ShowTrackr you can track your favorite TV shows automatically,
             so you never lose track of your TV shows ever again.
           </p>
-          <div id="emailcontainer">
+          <div class="emailcontainer">
             <input type="email" placeholder="enter email address" />
             <button>Start Tracking</button>
           </div>
@@ -50,7 +50,7 @@
         </div>
       </section>
       <section id="section2">
-        <div>
+        <div id="sec2info">
           <p>Features</p>
           <h1>Built and customized</h1>
           <p>
@@ -112,10 +112,41 @@
             <p>Integrated Chat Platform</p>
           </div>
         </div>
-        <div>
+        <div id="sec4phone">
           <img class="iphone" src="/assets/iphone.svg" />
         </div>
       </section>
+      <section id="section5">
+        <div>
+          <p>Community</p>
+          <h1>We believe in the power of community</h1>
+          <p>
+            Our goal is to create a product and service that you're satisfied
+            with and use it every day. This is why we're constantly working on
+            our services to make it better every day and really listen to what
+            our users have to say.
+          </p>
+          <button>Read more testimonials</button>
+        </div>
+      </section>
+      <section id="section6">
+        <div id="sec6info">
+          <p>Get Started</p>
+          <h1>Start tracking your TV shows or free</h1>
+          <p>
+            In order to start tracking your TV shows, all you have to do is
+            enter your email address. Everything else will be taken care of by
+            us. ALl you have to do is sit back, relax and enjoy your TV shows.
+          </p>
+          <div class="emailcontainer">
+            <input type="email" placeholder="enter email address" />
+            <button>Start Tracking</button>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <img src="/assets/Group 16.svg" />
+      </footer>
     </div>
   </body>
 </html>
