--- a/index.html
+++ b/index.html
@@ -148,5 +148,7 @@
         <img src="/assets/Group 16.svg" />
       </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
