updated animation to bounce effect with javascript and added smooth scroll to sections

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         <h1 id="logo">Show<span>Trackr</span></h1>
         <nav class="nav">
           <ul>
-            <li class="hide">Features</li>
-            <li class="hide">Community</li>
-            <li class="hide">Get Started</li>
+            <a href="#section2"><li class="hide">Features</li></a>
+            <a href="#section5"><li class="hide">Community</li></a>
+            <a href="#section6"><li class="hide">Get Started</li></a>
             <li class="hide">Log In</li>
           </ul>
-          <button id="getstartedbtn">Get Started</button>
+          <a href="#section6"
+            ><button id="getstartedbtn">Get Started</button></a
+          >
         </nav>
       </header>
       <hr />
