added sign up page with form validation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#section2"><li class="hide">Features</li></a>
             <a href="#section5"><li class="hide">Community</li></a>
             <a href="#section6"><li class="hide">Get Started</li></a>
-            <li class="hide">Log In</li>
+            <a href="/login.html"><li class="hide">Sign up</li></a>
           </ul>
           <a href="#section6"
             ><button id="getstartedbtn">Get Started</button></a
@@ -40,7 +40,7 @@
             so you never lose track of your TV shows ever again.
           </p>
           <div class="emailcontainer">
-            <input type="email" placeholder="enter email address" />
+            <input type="email " placeholder="enter email address" />
             <button>Start Tracking</button>
           </div>
           <img src="./assets/logos.svg" />
